// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Action Sheet Desktop 1`] = `
<section>
  

  <div
    class="fd-popover"
  >
    
    
    <div
      class="fd-popover__control"
    >
      
        
      <button
        aria-controls="actionSheetDesktop"
        aria-expanded="true"
        aria-haspopup="true"
        aria-label="More Options"
        class="fd-button fd-button--compact fd-button--transparent"
        onclick="onPopoverClick('actionSheetDesktop');"
      >
        
            
        <i
          class="sap-icon--settings"
        />
        
        
      </button>
      
    
    </div>
    
    
    <div
      aria-hidden="false"
      class="fd-popover__body"
      id="actionSheetDesktop"
    >
      
        
      <ul
        aria-label="List of contextual options"
        class="fd-action-sheet fd-action-sheet--compact"
        role="list"
      >
        
            
        <li
          class="fd-action-sheet__item"
          role="listitem"
        >
          
                
          <button
            class="fd-button fd-button--full-width fd-button--compact fd-button--transparent fd-button--text-alignment-left"
          >
            
                    
            <i
              class="sap-icon--attachment"
            />
            
                    
            <span
              class="fd-button__text"
            >
              Upload file
            </span>
            
                
          </button>
          
            
        </li>
        
            
        <li
          class="fd-action-sheet__item"
          role="listitem"
        >
          
                
          <button
            class="fd-button fd-button--full-width fd-button--compact fd-button--transparent fd-button--text-alignment-left"
          >
            
                    
            <i
              class="sap-icon--add"
            />
            
                    
            <span
              class="fd-button__text"
            >
              Assign user
            </span>
            
                
          </button>
          
            
        </li>
        
            
        <li
          class="fd-action-sheet__item"
          role="listitem"
        >
          
                
          <button
            class="fd-button fd-button--full-width fd-button--compact fd-button--transparent fd-button--text-alignment-left"
          >
            
                    
            <i
              class="sap-icon--print"
            />
            
                    
            <span
              class="fd-button__text"
            >
              Print
            </span>
            
                
          </button>
          
            
        </li>
        
            
        <li
          class="fd-action-sheet__item"
          role="listitem"
        >
          
                
          <button
            class="fd-button fd-button--full-width fd-button--compact fd-button--transparent fd-button--text-alignment-left"
          >
            
                    
            <i
              class="sap-icon--download"
            />
            
                    
            <span
              class="fd-button__text"
            >
              Download
            </span>
            
                
          </button>
          
            
        </li>
        
            
        <li
          class="fd-action-sheet__item"
          role="listitem"
        >
          
                
          <button
            class="fd-button fd-button--full-width fd-button--compact fd-button--transparent fd-button--text-alignment-left"
            onclick="onPopoverClick('actionSheetDesktop');"
          >
            
                    
            <span
              class="fd-button__text"
            >
              Decide Later
            </span>
            
                
          </button>
          
            
        </li>
        
        
      </ul>
      
    
    </div>
    

  </div>
  

  <div
    style="height: 300px"
  />
  

</section>
`;

exports[`Storyshots Components/Action Sheet Mobile 1`] = `
<div
  style="width: 350px; height: 600px; position: relative"
>
  
    
  <button
    aria-controls="actionSheetPhone"
    aria-expanded="true"
    aria-haspopup="true"
    aria-label="More Options"
    class="fd-button fd-button--transparent"
    onclick="toggleClass('actionSheetPhone', 'fd-action-sheet__wrapper--active');"
  >
    
        
    <i
      class="sap-icon--settings"
    />
    
    
  </button>
  
    
  <div
    class="fd-action-sheet__wrapper fd-action-sheet__wrapper--active"
    id="actionSheetPhone"
  >
    
        
    <h6
      class="fd-action-sheet__title"
    >
      Press cancel to hide action sheet
    </h6>
    
        
    <ul
      aria-label="List of contextual options"
      class="fd-action-sheet fd-action-sheet--mobile"
      role="list"
    >
      
            
      <li
        class="fd-action-sheet__item"
        role="listitem"
      >
        
                
        <button
          class="fd-button fd-button--full-width fd-button--transparent fd-button--text-alignment-left"
        >
          
                    
          <i
            class="sap-icon--attachment"
          />
          
                    
          <span
            class="fd-button__text"
          >
            Upload file
          </span>
          
                
        </button>
        
            
      </li>
      
            
      <li
        class="fd-action-sheet__item"
        role="listitem"
      >
        
                
        <button
          class="fd-button fd-button--full-width fd-button--transparent fd-button--text-alignment-left"
        >
          
                    
          <i
            class="sap-icon--add"
          />
          
                    
          <span
            class="fd-button__text"
          >
            Assign user
          </span>
          
                
        </button>
        
            
      </li>
      
            
      <li
        class="fd-action-sheet__item"
        role="listitem"
      >
        
                
        <button
          class="fd-button fd-button--full-width fd-button--transparent fd-button--text-alignment-left"
        >
          
                    
          <i
            class="sap-icon--print"
          />
          
                    
          <span
            class="fd-button__text"
          >
            Print
          </span>
          
                
        </button>
        
            
      </li>
      
            
      <li
        class="fd-action-sheet__item"
        role="listitem"
      >
        
                
        <button
          class="fd-button fd-button--full-width fd-button--transparent fd-button--text-alignment-left"
        >
          
                    
          <i
            class="sap-icon--download"
          />
          
                    
          <span
            class="fd-button__text"
          >
            Download
          </span>
          
                
        </button>
        
            
      </li>
      
            
      <li
        class="fd-action-sheet__item"
        role="listitem"
      >
        
                
        <button
          class="fd-button fd-button--full-width fd-button--transparent fd-button--text-alignment-left"
          onclick="toggleClass('actionSheetPhone', 'fd-action-sheet__wrapper--active');"
        >
          
                    
          <span
            class="fd-button__text"
          >
            Decide Later
          </span>
                        
                
        </button>
        
            
      </li>
      
            
      <li
        class="fd-action-sheet__item"
        role="listitem"
      >
        
                
        <button
          class="fd-button fd-button--full-width fd-button--negative"
          onclick="toggleClass('actionSheetPhone', 'fd-action-sheet__wrapper--active');"
        >
          
                    
          <span
            class="fd-button__text"
          >
            Cancel
          </span>
          
                
        </button>
        
            
      </li>
      
        
    </ul>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Action Sheet Tablet 1`] = `
<section>
      

  <div
    class="fd-popover"
  >
    
    
    <div
      class="fd-popover__control"
    >
      
        
      <button
        aria-controls="actionSheetTablet"
        aria-expanded="true"
        aria-haspopup="true"
        aria-label="More Options"
        class="fd-button fd-button--transparent"
        onclick="onPopoverClick('actionSheetTablet');"
      >
        
            
        <i
          class="sap-icon--settings"
        />
        
        
      </button>
      
    
    </div>
    
    
    <div
      aria-hidden="false"
      class="fd-popover__body"
      id="actionSheetTablet"
    >
      
        
      <ul
        aria-label="List of contextual options"
        class="fd-action-sheet"
        role="list"
      >
        
            
        <li
          class="fd-action-sheet__item"
          role="listitem"
        >
          
                
          <button
            class="fd-button fd-button--full-width fd-button--transparent fd-button--text-alignment-left"
          >
            
                    
            <i
              class="sap-icon--attachment"
            />
            
                    
            <span
              class="fd-button__text"
            >
              Upload file
            </span>
            
                
          </button>
          
            
        </li>
        
            
        <li
          class="fd-action-sheet__item"
          role="listitem"
        >
          
                
          <button
            class="fd-button fd-button--full-width fd-button--transparent fd-button--text-alignment-left"
          >
            
                    
            <i
              class="sap-icon--add"
            />
            
                    
            <span
              class="fd-button__text"
            >
              Assign user
            </span>
            
                
          </button>
          
            
        </li>
        
            
        <li
          class="fd-action-sheet__item"
          role="listitem"
        >
          
                
          <button
            class="fd-button fd-button--full-width fd-button--transparent fd-button--text-alignment-left"
          >
            
                    
            <i
              class="sap-icon--print"
            />
            
                    
            <span
              class="fd-button__text"
            >
              Print
            </span>
            
                
          </button>
          
            
        </li>
        
            
        <li
          class="fd-action-sheet__item"
          role="listitem"
        >
          
                
          <button
            class="fd-button fd-button--full-width fd-button--transparent fd-button--text-alignment-left"
          >
            
                    
            <i
              class="sap-icon--download"
            />
            
                    
            <span
              class="fd-button__text"
            >
              Download
            </span>
            
                
          </button>
          
            
        </li>
        
            
        <li
          class="fd-action-sheet__item"
          role="listitem"
        >
          
                
          <button
            class="fd-button fd-button--full-width fd-button--transparent fd-button--text-alignment-left"
            onclick="onPopoverClick('actionSheetTablet');"
          >
            
                    
            <span
              class="fd-button__text"
            >
              Decide Later
            </span>
            
                
          </button>
          
            
        </li>
        
        
      </ul>
      
    
    </div>
    

  </div>
  

  <div
    style="height: 300px"
  />
  

</section>
`;
